[package]
name = "beframe"
version = "0.1.5"
edition = "2021"

[dependencies]
clap = { version= "4.5.4", features=["derive"] }
ffmpeg-next = { version = "7.0.0", features=["build"] }
polars = { version = "0.39.2", features = ["lazy", "parquet"] }
image = "0.25.1"
md-5 = "0.10.6"
rayon = "1.10"


[[bin]]
name = "bf"
path = "src/cli.rs"

[lib]
name = "core"
path = "src/lib.rs"