[package]
name = "beframe"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version= "4.5.6", features=["derive"] }
ffmpeg-next = { version = "7.0.2", features=["build"] }
polars = { version = "0.40.0", features = ["lazy", "parquet"] }
image = "0.25.1"
md-5 = "0.10.6"
rayon = "1.10"

[[bin]]
name = "bf"
path = "src/cli.rs"

[lib]
name = "lib"
path = "src/lib.rs"
